--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -205,9 +205,9 @@ input[type=text]:hover{
 }
 /* slider */
 .slider {
+    position: relative;
     width: 100%;
     height: auto;
-    position: relative;
    
 }
 .slider-img img {
@@ -220,7 +220,8 @@ input[type=text]:hover{
     margin-left: 60px;
     margin-right: 8px;
     width: 40%;
-    top: 20%;
+    top: 50%;
+    transform: translateY(calc(-50%));
     display: flex;
     flex-wrap: wrap;
     align-items: flex-end;
@@ -236,17 +237,19 @@ input[type=text]:hover{
     font-size: 3.3vw;
     font-weight: 800;
     color: var(--black-color);
-    line-height: 1.4;
+    line-height: 1.5;
 }
-.slider__paragraph-title{
+.slider__paragraph-title {
     font-size: 1.2vw;
     font-weight: 500;
     color: var(--text-color);
-    line-height: 1.4;
+    line-height: 1.5;
     margin: 15px 0;
+    
 }
 .style-height-slider{
-    height: 4.2vw;
+    height: 50px;
+    /* max-width: 215px; */
 }
 .btn-color-slider{
     color: var(--white-color);
@@ -255,9 +258,9 @@ input[type=text]:hover{
 .border-icon{
     background-color: var(--white-color);
     color: var(--primary-color);
-    padding: 0.7vw;
+    padding: 8px;
     border-radius: 50%;
-    font-size: 1.5vw;
+    font-size: 15px;
     font-weight: 500;
     margin-left: 10px;
 }
@@ -296,9 +299,11 @@ input[type=text]:hover{
 }
 
 .content__lorem-title{
-    font-size: 12px;
-    line-height: 1.4;
+    font-size: 14px;
+    line-height: 1.5;
     color: var(--text-color);
+    height: auto;
+    margin-top: 15px;
 }
 .seen{
     position: relative;
@@ -314,7 +319,6 @@ input[type=text]:hover{
     font-size: 18px;
     font-weight: 500;
     background-color: #ffffff;
-    padding: 8px 0;
 }
 
 /* More */
@@ -336,13 +340,13 @@ input[type=text]:hover{
     padding: 20px 0;
 }
 .content-heading{
-    line-height: 1.4;
+    line-height: 1.5;
     font-size: 35px;
     font-weight: 700; 
 }
 .content-title{
     font-size: 14px;
-    line-height: 1.4;
+    line-height: 1.5;
     color: var(--text-color);
     margin: 40px 0;
 }
@@ -366,14 +370,12 @@ input[type=text]:hover{
 .content__title a,
 .content__title{
     font-size: 14px;
-    line-height: 1.4;
+    /* line-height: 1.5; */
     color: var(--text-color);
     text-align: center;
     margin: 18px ;
 }
-.content__title{
-    margin: 19px 115px;
-}
+
 
 /* content 4 */
 .content__4{
@@ -416,12 +418,12 @@ input[type=text]:hover{
 }
 .content__4-heading{
     font-size: 18px;
-    line-height: 1.4;
+    line-height: 1.5;
     font-weight: 600;
 }
 .content__4-title{
     font-size: 14px;
-    line-height: 1.4;
+    line-height: 1.5;
     color: var(--text-color);
     margin-top: 15px;
 }
@@ -472,7 +474,7 @@ input[type=text]:hover{
 
 .accordion__paragraph{
     font-size: 14px;
-    line-height: 1.6;
+    /* line-height: 1.6; */
     width: 65%;
     color: var(--text-color);
     padding: 18px 32px ;
@@ -531,13 +533,13 @@ input[type=text]:hover{
 .content__footer-title1{
     font-size: 15px;
     font-weight: 700;
-    line-height: 1.4;
+    line-height: 1.5;
     color: var(--primary-color);
 }
 .content__footer-title2{
     font-size: 22px;
     font-weight: 800;
-    line-height: 1.4;
+    line-height: 1.5;
     
 }
 
