--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -17,7 +17,8 @@ html{
     font-size: 62.5%;
     line-height: 1.6rem;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Montserrat";
+    
 }
 .app{
     overflow-x: hidden;
